@@ -29,6 +29,7 @@ Version 4.0 (2013-05-xx)
 	Fixed bug where context menu would be position at an incorrect coordinate in inline mode.
 	Fixed bug where inserting lists in inline mode on IE would produce errors since the body would be converted.
 	Fixed bug where the body couldn't be styled properly in custom content_css files.
+	Fixed so the isDirty/isNotDirty states gets updated to true/false on save() and change events.
 	Fixed so skins have separate CSS files for inline and iframe mode.
 	Fixed so menus and tool tips gets constrained to the current viewport.
 	Fixed so an error is thrown if users load jQuery after the jQuery version of TinyMCE.
